--- a/FontAwesome/FontAwesome.UWP/FontAwesome.UWP.csproj
+++ b/FontAwesome/FontAwesome.UWP/FontAwesome.UWP.csproj
@@ -101,6 +101,9 @@
     <AppxManifest Include="Package.appxmanifest">
       <SubType>Designer</SubType>
     </AppxManifest>
+    <Content Include="Assets\Font Awesome 5 Free-Solid-900.otf" />
+    <Content Include="Assets\Font Awesome 5 Brands-Regular-400.otf" />
+    <Content Include="Assets\Font Awesome 5 Free-Regular-400.otf" />
     <None Include="FontAwesome.UWP_TemporaryKey.pfx" />
   </ItemGroup>
   <ItemGroup>
@@ -149,7 +152,7 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Xamarin.Forms" Version="2.5.0.122203" />
-    <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform" Version="6.0.1"/>
+    <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform" Version="6.0.1" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\FontAwesome\FontAwesome.csproj">
